--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@mui/material": "^7.2.0",
     "@mui/styled-engine-sc": "^7.2.0",
     "axios": "^1.10.0",
+    "framer-motion": "^12.23.6",
+    "gsap": "^3.13.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
